// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spartacus Order schematics: ng-add Order feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { OrderModule } from "@spartacus/order";
import { orderTranslationChunksConfig, orderTranslationsEn } from "@spartacus/order/assets";
import { OrderRootModule } from "@spartacus/order/root";

@NgModule({
  declarations: [],
  imports: [
    OrderRootModule,
    OrderModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: orderTranslationsEn },
      chunks: orderTranslationChunksConfig,
    },
  })]
})
export class OrderFeatureModule { }
"
`;

exports[`Spartacus Order schematics: ng-add Order feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { orderTranslationChunksConfig, orderTranslationsEn } from "@spartacus/order/assets";
import { ORDER_FEATURE, OrderRootModule } from "@spartacus/order/root";

@NgModule({
  declarations: [],
  imports: [
    OrderRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [ORDER_FEATURE]: {
        module: () =>
          import('@spartacus/order').then((m) => m.OrderModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: orderTranslationsEn },
      chunks: orderTranslationChunksConfig,
    },
  })
  ]
})
export class OrderFeatureModule { }
"
`;

exports[`Spartacus Order schematics: ng-add Order feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/order";
"
`;

exports[`Spartacus Order schematics: ng-add Order feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:pipe": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/order.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            },
            "styles": [
              "src/styles/spartacus/order.scss"
            ]
          }
        }
      }
    }
  }
}"
`;
